2012-02-13  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.9 release procedure:
 	Changes since nco-4_0_8: array(), revert NO_FILL, rounding
	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1

	* Linux GCC 4.6 regex.h also now, like Mac OS X, depends on sys/types.h

	* Clean-up set-but-unused variables for GCC 4.6

	* Document improved ncap2 array() function

2012-02-08  Charlie Zender  <zender@uci.edu>

	* Document ncap2 array() function

	* Clean-up prs_cls.cc

2012-02-06  Charlie Zender  <zender@uci.edu>

	* Build with netCDF 4.2 snapshots.
	No more regressions than with 4.1.3 so 4.2 is new default.

2011-12-31  Charlie Zender  <zender@uci.edu>

	* Update NCO homepage to announce ACCESS and deprecate SDO

2011-12-24  Charlie Zender  <zender@uci.edu>

	* Change copyright year to 2012

2011-12-23  Charlie Zender  <zender@uci.edu>

	* Warn when number of attributes exceeds NC_MAX_ATTRS

	* Learned NASA will fund ACCESS proposal!

2011-12-10  Charlie Zender  <zender@uci.edu>

	* Print helpful hint with NC_EVARSIZE errors

2011-12-07  Charlie Zender  <zender@uci.edu>

	* Tidy nco_cln_utl.c

	* Fix TODO nco1025: Warn when catting files with different scale factors

	* Tidy ncra.c

2011-12-06  Charlie Zender  <zender@uci.edu>

	* Document hyperslabbing irregular regions based on variable values

2011-12-01  Charlie Zender  <zender@uci.edu>

	* Fixed TODO nco1029: warn on ncks -A when dim(old_record) != dim(new_record)

2011-11-29  Charlie Zender  <zender@uci.edu>

	* Quiet set-but-not-used warnings appearing since GCC 4.6+

2011-11-22  Charlie Zender  <zender@uci.edu>

	* Update to Ubuntu 11.10 build chain and GCC 4.6

	* Re-base libtool using autoreconf -f -i
	This fixes some configure compile errors reported by Henry

2011-11-14  Charlie Zender  <zender@uci.edu>

	* Realized that ncwa was working on asymmetric weighting