@@ -6,6 +6,8 @@
 	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
 	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1
 
+	* Configure inexplicably does not find regex.h when protected by HAVE_REGEX_H tokens
+
 	* Linux GCC 4.6 regex.h also now, like Mac OS X, depends on sys/types.h
 
 	* Clean-up set-but-unused variables for GCC 4.6
